--- a/week8/index1.html
+++ b/week8/index1.html
@@ -109,7 +109,7 @@
             <img src="/week5/img/image-Photoroom (29).png" class="img_jellyfish"> 
             <div class="jellyfish-info">
               
-                <a href="/week8/GoldenJellyfish.html" class="link-text"> แแมงกะพรุนทะเลทอง (Golden Jellyfish) <br>
+                <a href="/week8/GoldenJellyfish.html" class="link-text"> แมงกะพรุนทะเลทอง (Golden Jellyfish)</a> 
                 <br>
                 แมงกะพรุนที่พบในทะเลของปาปัวนิวกินีและอินโดนีเซีย มักอาศัยอยู่ในทะเลสาบที่ไม่มีน้ำไหลเวียนพวกมันมีขนาดเล็กและไม่ค่อยมีพิษ  
             </div>
