--- a/week10/index.html
+++ b/week10/index.html
@@ -1,1 +1,27 @@
-หน้าแรกจร้า
+<head>
+    <meta charset="UTF-8">
+    <title>JabJum shonp</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <div class="form-containers">
+        <div class="image-container">
+        <h1 style="color: rgb(191, 0, 95);">JabJum Shop</h1>
+        <div class="input-container">
+            <input type="Box" name="search">
+            <button type="submit" class="submit-btnsearch">ค้นหา</button>
+        </div>
+            <img src="/week10/img/tw1.png" width="60px" height="60px"onclick="window.location.href='basket.html';">
+            <img src="/week10/img/tw2.png" width="60px" height="50px" onclick="window.location.href='longin.html';">
+        </div>
+        <br>
+         <img src="/week10/img/phont1.png" width="350px" height="450px" onclick="window.location.href='product1.html';">
+         <img src="/week10/img/phont2.png" width="350px" height="450px" onclick="window.location.href='product2.html';">
+         <img src="/week10/img/phont3.png" width="350px" height="450px" onclick="window.location.href='product3.html';">
+         
+
+    </div>
+</body>
+
+</html>
